space/referrer-spam-iptables.txt
-A INPUT -s 203.97.97.130 -j DROP 

-A INPUT -s 203.144.143.6 -j DROP 
-A INPUT -s 69.166.179.251 -j DROP 
-A INPUT -s 69.171.19.54 -j DROP 
-A INPUT -s 67.43.100.48 -j DROP 
-A INPUT -s 82.67.36.5 -j DROP 
-A INPUT -s 82.135.202.161 -j DROP 
-A INPUT -s 81.19.227.68 -j DROP 
-A INPUT -s 81.75.197.111 -j DROP 
-A INPUT -s 80.95.80.26 -j DROP 
-A INPUT -s 80.53.220.178 -j DROP 
-A INPUT -s 68.89.20.132 -j DROP 
-A INPUT -s 148.244.150.58 -j DROP 
-A INPUT -s 81.31.38.25 -j DROP 
-A INPUT -s 81.31.22.210 -j DROP 
-A INPUT -s 216.208.8.227 -j DROP 
-A INPUT -s 216.208.223.67 -j DROP 
-A INPUT -s 216.208.14.227 -j DROP 
-A INPUT -s 216.20.70.81 -j DROP 
-A INPUT -s 216.204.237.7 -j DROP 
-A INPUT -s 213.76.152.186 -j DROP 
-A INPUT -s 206.78.115.4 -j DROP 
-A INPUT -s 200.206.78.162 -j DROP 
-A INPUT -s 202.29.15.4 -j DROP 
-A INPUT -s 193.251.0.0/255.255.0.0 -j DROP 
-A INPUT -s 38.113.206.0/255.255.255.0 -j DROP 
-A INPUT -s 66.250.69.7 -j DROP 
-A INPUT -s 66.128.44.82 -j DROP 
-A INPUT -s 66.55.149.35 -j DROP 
-A INPUT -s 195.194.11.253 -j DROP 
-A INPUT -s 192.115.106.236 -j DROP 
-A INPUT -s 193.170.47.0/255.255.255.0 -j DROP 
-A INPUT -s 193.170.68.0/255.255.255.0 -j DROP 
-A INPUT -s 216.148.246.0/255.255.255.0 -j DROP 
-A INPUT -s 216.148.244.0/255.255.255.0 -j DROP 
-A INPUT -s 170.224.224.0/255.255.255.0 -j DROP 
-A INPUT -s 66.119.0.0/255.255.0.0 -j DROP 
-A INPUT -s 38.113.206.0/255.255.255.0 -j DROP 
-A INPUT -s 82.194.62.0/255.255.255.0 -j DROP
